--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Exo+2&display=swap");
 
-body *:not(#background *, .loading-container *) {
+body *:not(#background *, .loading-container, .loading-container *, #aiMessage *, .info-msg *, .success-msg *, .warning-msg *, .error-msg *) {
   animation: fadeIn 0.5s ease-in-out;
   transition: all 0.2s ease-in-out;
 }
@@ -15,7 +15,11 @@ body {
   height: 100vh;
   margin: 0;
   background: rgb(16, 21, 29);
-  background-image: radial-gradient(500px 200px at 50% 0, #131f33 20%, rgba(19, 30, 49, 0) 100%);
+  background-image: radial-gradient(
+    500px 200px at 50% 0,
+    #131f33 20%,
+    rgba(19, 30, 49, 0) 100%
+  );
 }
 
 a {
@@ -42,8 +46,14 @@ strong,
   width: 70%;
   max-height: 70%;
   overflow-y: auto;
-  --mask: linear-gradient(to bottom, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 5%, rgba(255,255,255,1) 95%, rgba(255,255,255,0) 100%);
-  -webkit-mask: var(--mask); 
+  --mask: linear-gradient(
+    to bottom,
+    rgba(255, 255, 255, 0) 0%,
+    rgba(255, 255, 255, 1) 5%,
+    rgba(255, 255, 255, 1) 95%,
+    rgba(255, 255, 255, 0) 100%
+  );
+  -webkit-mask: var(--mask);
   mask: var(--mask);
 }
 
@@ -61,28 +71,41 @@ strong,
   margin-top: 20px;
   position: fixed;
   bottom: 2.3rem;
-  flex-direction: row-reverse;
-}
 
-#input {
   border: 2px solid rgb(42, 55, 74);
   caret-color: white;
   color: white !important;
   background: rgba(22, 30, 41, 0.3);
   font-weight: 320;
-  min-height: 32px;
+  min-height: 50px;
   outline: none;
   padding-inline: 8px;
   padding-top: 6px;
   width: 480px;
   transition: all 0.2s ease-in-out;
   box-sizing: border-box;
-  overflow: hidden;
   z-index: 20;
-  resize: none;
   padding-bottom: 10px;
   backdrop-filter: blur(2px);
   align-self: center;
+  border-radius: 30px;
+  display: flex;
+  align-items: center;
+  max-height: 95%;
+}
+
+#input {
+  margin-right: 70px;
+  max-width: 80%;
+  max-height: 100%;
+  resize: none;
+  vertical-align: middle;
+  flex-grow: 1;
+  background-color: transparent;
+}
+
+#input:focus {
+  outline: none;
 }
 
 #input span {
@@ -90,19 +113,69 @@ strong,
   font-weight: 320;
 }
 
-#input::placeholder {
-  text-align: center;
-}
-
-#input:focus {
-  border: 2px solid; /* Set your border width */
-  border-image: linear-gradient(133.61deg, #a87ffb 17.33%, #25a6e9 100.47%);
-  border-image-slice: 1; /* Ensures the entire border is covered by the gradient */
-}
-
 #input::after {
   background-image: linear-gradient(133.61deg, #a87ffb 17.33%, #25a6e9 100.47%);
   filter: blur(10px);
+}
+
+#submit {
+  width: 40px;
+  height: auto;
+  border-radius: 50%;
+  transition: all 0.5s ease;
+  pointer-events: auto !important;
+  position: fixed;
+  right: 4px;
+  bottom: 3px;
+  z-index: 21;
+}
+
+#submit svg {
+  width: 100%;
+  height: 100%;
+}
+
+#submit::after {
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  position: absolute;
+  content: "";
+  border-radius: 50%;
+  filter: blur(8px);
+  background-image: linear-gradient(133.61deg, #a87ffb 17.33%, #25a6e9 100.47%);
+  z-index: -1;
+  transition: all 0.5s ease;
+}
+
+#submit:hover::after {
+  opacity: 1;
+  width: 100%;
+  height: 100%;
+  animation: submitButton 10s ease infinite;
+}
+
+@keyframes submitButton {
+  from {
+    transform: rotate(0);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes animatedgradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
 }
 
 /* Animation keyframes - you need to add prefixes */
@@ -337,27 +410,27 @@ strong,
   fill: white;
 }
 
-ul, ol {
-    padding-inline-start: 20px !important;
-    margin-top: 10px !important;
-    margin-bottom: 20px !important;
+ul,
+ol {
+  padding-inline-start: 20px !important;
+  margin-top: 10px !important;
+  margin-bottom: 20px !important;
 }
 
 li {
   list-style: disc;
 }
 
-p {
-  margin-bottom: 10px !important;
-}
-
-@media (max-width: 600px) {
-    #input {
-    width: 240px;
-  }
-}
-
 @media (max-width: 768px) {
+  .input-container {
+    width: 90%;
+    bottom: 10px;
+  }
+  #input {
+      max-width: 70%;
+      margin-right: 75px;
+  }
+  
   #settingsModal {
     width: 350px !important;
   }
@@ -374,7 +447,8 @@ p {
     width: 100% !important;
   }
 
-  #aiMessage, #userMessage {
+  #aiMessage,
+  #userMessage {
     margin-right: 0 !important;
     margin-left: 0 !important;
     max-width: 90% !important;
@@ -445,6 +519,10 @@ p {
   z-index: 200;
 }
 
+.info-msg *, .success-msg *, .warning-msg *, .error-msg * {
+    padding-inline: 5px;
+}
+
 .close-btn {
   align-self: center;
 }
@@ -458,7 +536,7 @@ p {
   background-color: rgba(7, 73, 149, 0.35);
 }
 .info-msg .close-btn {
-    color: #0396ff;
+  color: #0396ff;
 }
 
 .success-msg {
@@ -491,17 +569,18 @@ p {
   background-color: rgba(220, 17, 1, 0.16);
 }
 .error-msg:hover {
-   background-color: rgba(220, 17, 1, 0.33);
+  background-color: rgba(220, 17, 1, 0.33);
 }
 .error-msg .close-btn {
   color: #ff0303;
 }
 
-#messageContainer i, #messageContainer strong, #messageContainer p {
-    padding-inline: 5px;
-    align-self: center;
-    text-align: center;
-    margin: 0 !important;
+#messageContainer i,
+#messageContainer strong,
+#messageContainer p {
+  align-self: center;
+  text-align: center;
+  margin: 0 !important;
 }
 
 #closePasswordModal {
@@ -631,9 +710,9 @@ p {
 .btn_ {
   font-size: 14px;
   color: #fff;
-  background-color: #10151D;
+  background-color: #10151d;
   padding: 10px 30px;
-  border: solid 1px #232E3F;
+  border: solid 1px #232e3f;
   border-radius: 1px;
   transition: all 0.2s ease-in-out;
   display: flex;
@@ -647,9 +726,9 @@ p {
 .btn_:hover {
   transition: all 0.2s ease-in-out;
   padding: 10px 30px;
-  background-color: #141824;
+  background-color: rgba(10, 12, 18, 1);
   color: #ffffff;
-  border: solid 1px #8969CD;
+  border: solid 1px rgba(10, 12, 18, 1);
 }
 
 #clearHistory {
@@ -681,20 +760,15 @@ p {
 }
 
 .modals {
-  background-color: #10151D;
-  border: solid 1px #232E3F;
+  background-color: #10151d;
+  border: solid 1px #232e3f;
 }
 
 [contenteditable="true"]:empty:before {
   content: attr(placeholder);
   color: #999;
   position: relative;
-  top: 0px;
-  /*
-    For IE only, do this:
-    position: absolute;
-    top: 10px;
-    */
+  top: 1px;
   cursor: text;
 }
 
@@ -705,6 +779,7 @@ pre {
   padding: 16px;
   font-size: 85%;
   position: relative;
+  overflow: auto;
 }
 
 .pre-wrapper {
@@ -781,15 +856,15 @@ pre {
 #aiMessage {
   align-self: flex-start;
   margin-right: 30%;
-  background-color: #141824;
-  border: solid 1px #8969CD;
+  background-color: rgba(10, 12, 18, 1);
+  border: solid 1px rgb(255 185 82);
 }
 
 #userMessage {
   align-self: flex-end;
   margin-left: 30%;
-  background-color: #10151D;
-  border: solid 1px #232E3F;
+  background-color: #10151d;
+  border: solid 1px #232e3f;
 }
 
 .messageGroup {
@@ -799,15 +874,22 @@ pre {
 
 #userMessage,
 #aiMessage {
+  display: flex;
   min-width: 10rem;
   max-width: 75%;
-  padding: 8px;
+  padding: 15px;
   margin-bottom: 8px;
   flex-direction: column;
+  border-radius: 30px;
+}
+
+#aiMessage img, #userMessage img {
+    border-radius: 15px;
+  width: 300px;
 }
 
 #aiProfile {
-  background: url(./images/stella.jpg);
+  background: url(/ai-selector/media/oracle.png);
   content: "";
   width: 48px;
   height: 48px;
@@ -829,7 +911,6 @@ pre {
   top: 15;
   position: relative;
   background-size: contain;
-  border-radius: 50%;
   transition: all 0.5s ease-in-out;
 }
 
@@ -841,16 +922,16 @@ pre {
   height: 11px;
   line-height: 0;
   border-radius: 11px;
-  background-color: #141824;
-  border: solid 2px #8969CD;
+  background-color: rgba(10, 12, 18, 1);
+  border: solid 1.5px rgb(255 185 82);
   position: relative;
   display: block;
-  color: #141824;
-  -webkit-text-stroke: 2px #8969CD;
+  color: rgba(10, 12, 18, 1);
+  -webkit-text-stroke: 1px rgb(255 185 82);
   font-family: system-ui;
   text-align: left;
   font-size: 70px;
-  left: 0;
+  left: 10;
   transition: all 0.5s ease;
 }
 
@@ -862,12 +943,12 @@ pre {
   height: 11px;
   line-height: 0;
   border-radius: 11px;
-  background-color: #10151D;
-  border: solid 2px #232E3F;
+  background-color: #10151d;
+  border: solid 2px #232e3f;
   position: absolute;
   display: block;
-  color: #10151D;
-  -webkit-text-stroke: 2px #232E3F;
+  color: #10151d;
+  -webkit-text-stroke: 2px #232e3f;
   font-family: system-ui;
   text-align: right;
   font-size: 70px;
@@ -875,48 +956,121 @@ pre {
   transition: all 0.5s ease;
 }
 
-#submit {
-  width: 45px;
-  height: auto;
+#loading-logo {
+  width: 50px;
+  height: 50px;
+  align-self: center;
+  animation: fadeIn 0.5s ease-in-out;
+}
+
+.upload-container {
+  position: fixed;
+  bottom: 3px;
+  right: 48px;
+}
+
+.upload-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  border: none;
   border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  font-size: 16px;
+  cursor: pointer;
+  transition: background-color 0.3s ease, box-shadow 0.3s ease;
+}
+
+.upload-button:hover {
+  background-color: #91beff0d;
+}
+
+.upload-icon {
+  fill: currentColor;
+  height: 24px;
+  width: 24px;
+}
+
+#file-upload:focus + label .upload-button {
+  outline: none;
+  box-shadow: 0 0 0 3px #232e3f;
+}
+
+.file-info {
+  display: none;
+  background: #232e3f;
+  padding: 10px;
   position: relative;
-  margin: 20px;
-  transition: all 0.5s ease;
-  pointer-events: auto !important;
+  bottom: 60px;
+  right: -50;
+  border-radius: 10px;
+  justify-content: center;
+  align-items: center;
 }
-
-#submit svg {
-  width: 100%;
-  height: 100%;
-}
-
-#submit::after {
-  top: 0;
-  right: 0;
-  width: 100%;
-  height: 100%;
-  opacity: 0;
-  position: absolute;
+.file-name::after {
   content: '';
-  border-radius: 50%;
-  filter: blur(8px);
-  background-image: linear-gradient(133.61deg,#a87ffb 17.33%,#25a6e9 100.47%);
-  z-index: -1; 
-  transition: all 0.5s ease;
+  position: absolute;
+  display: block;
+  width: 0;
+  z-index: 1;
+  border-style: solid;
+  border-color: #232e3f transparent;
+  border-width: 10px 10px 0;
+  bottom: -9px;
+  left: 89%;
+  margin-left: -20px;
+  
 }
 
-#submit:hover::after {
-  opacity: 1;
+.file-name {
+  display: flex;
+  color: #FFFFFF;
+  text-align: center;
+  padding: 10px;
+  height: 40px;
+  vertical-align: middle;
   width: 100%;
-  height: 100%;
-  animation: submitButton 10s ease infinite;
+  border-radius: 10px;
+  align-items: center;
 }
 
-@keyframes submitButton {
-  from {
-    transform: rotate(0);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.file-icon {
+  fill: #ffffff;
+  margin-right: 8px;
+  width: 36px;
+}
+
+.remove-icon {
+  fill: rgba(244, 67, 54, 0.8);
+  color: white;
+  border: none;
+  border-radius: 50%;
+  width: 24px;
+  height: 24px;
+  font-size: 16px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  opacity: 1;
+}
+
+.remove-icon:hover {
+  opacity: 0.8;
+}
+
+#file-pop-up {
+  margin-top: 20px;
+  font-size: 10px;
+}
+
+#file-pop-up svg {
+  width: 15px;
+  margin-left: 10px;
+}
+#file-pop-up .file-info {
+  padding: 5px;
+  padding-right: 15px;
 }
